# Petsc_test

./: .gitignore
001_hello_world/: example  example.c
002_Poisson_minimum_code/: poisson
003_cmake_test/: CMakeLists.txt  poisson.c
004_Gmsh_DMPlex/: CMakeLists.txt  gmsh1.c
005_Gmsh_DMPlex_CPP/: CMakeLists.txt  gmsh2.cpp
005_Gmsh_DMPlex_CPP/gmsh_input/: test2D.msh
006_Gmsh_DMPlex_WriteNode/: CMakeLists.txt  gmsh3.cpp
007_Gmsh_DMPlex_WriteNode2/: CMakeLists.txt  functions.cpp  functions.h  gmsh2plex.cpp  gmsh2plex_vtk.c  square2d.geo
008_Gmsh_DMPlex_IDmapping/: functions.cpp  functions.h  gmsh2plex.cpp  mesh.h
009_Gmsh_DMPlex_P2_Parmetis/: functions.cpp  functions.h  gmsh2plex.cpp  mesh.cpp  mesh.h
010_P2_Parmetis_vtk/: CMakeLists.txt  functions.h  gmsh2plex.cpp  mesh.cpp  mesh.h
010_P2_Parmetis_vtk/gmsh_input/: test2D.msh
011_P2tri_Elastic/: check.xlsx  functions.cpp  functions.h  gmsh2plex.cpp  mesh.cpp  ~$check.xlsx
011_P2tri_Elastic/gmsh_input/: test2D.geo  test2D_2.msh
012_P2tri_Elastic/: CMakeLists.txt  elem.cpp  elem.h  functions.cpp  functions.h  gmsh.cpp  gmsh.h  gmsh2plex.cpp  mesh.cpp  mesh.h  node.h
013_P2hex_Elastic/: CMakeLists.txt  functions.cpp  functions.h  gmsh.cpp  gmsh2plex.cpp  node.h
013_P2hex_Elastic/gmsh_input/: test3D.geo  test3D_1.msh  test3D_8.msh  test3D_c.msh
013_P2hex_Elastic/libs/element/: CMakeLists.txt  elem.cpp  elem.h  elem.hpp  elems.h  hexl27.cpp  hexl27.h  trian6.cpp  trian6.h
013_P2hex_Elastic/libs/functions/: CMakeLists.txt  functions.cpp  functions.h
013_P2hex_Elastic/libs/gmsh/: CMakeLists.txt  gmsh.cpp  gmsh.h
013_P2hex_Elastic/libs/node/: CMakeLists.txt  node.cpp  node.h
013_P2hex_Elastic/libs/timer/: timer.cpp  timer.h
014_Consol/: CMakeLists.txt  gmsh2plex.cpp
014_Consol/gmsh_input/: test3D.geo  test3D_1000.msh
014_Consol/libs/element/: CMakeLists.txt  elem.h  elem.hpp  hexl27.cpp  hexl27.h  trian6.cpp  trian6.h
014_Consol/libs/functions/: functions.cpp  functions.h
014_Consol/libs/node/: node.cpp  node.h
014_Consol/libs/timer/: CMakeLists.txt
Notion/Petscについて_20250829/プライベート、シェア/: PETScについて 2541cd7c3133805eb1cac5603d381013.html
Notion/Petscについて_20250829/プライベート、シェア/PETScについて 2541cd7c3133805eb1cac5603d381013/: 2次要素のmshをDMPlexで読み込む 2571cd7c313380b1a40bf9059a235d84.html  CMakeによるビルド 2551cd7c31338052b209f169aaa107cc.html  DMPlexの節点の情報を出力する 2561cd7c313380f59699d1f2dbd3cf90.html  cppファイルにしてみる 2561cd7c313380b4961dd216172ad7cb.html  メッシュの領域分割 2561cd7c313380149938d823c5f17a20.html  環境設定（ソースからビルド） 2541cd7c31338000845fd46ebbd2ceea.html  環境設定（パッケージ版） 2541cd7c3133800cbee3f48baf008ee4.html  連立方程式を解く最小コード 2541cd7c313380ee96fedc562f70094f.html  ２次要素のmshを読込んで領域分割し，paraviewで表示 25d1cd7c313380cb9aeadf6d8d0979e6.html  ２次要素のmshを読込んで，DMPlexのpointIDとgmshのelementTagの紐づけ 25c1cd7c313380e9818de8aa844d036c.html
