cmake_minimum_required(VERSION 3.18)
set( PRG_NAME "gmsh2plex" )
project( ${PRG_NAME} CXX)
find_package(MPI REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(PETSC REQUIRED IMPORTED_TARGET petsc)
add_executable(${PRG_NAME} ${PRG_NAME}.cpp functions.cpp mesh.cpp node.cpp elem.cpp gmsh.cpp)
target_link_libraries(${PRG_NAME} PRIVATE MPI::MPI_CXX PkgConfig::PETSC)